# rgc-natstim-model

./: .gitignore  01_figure_2.ipynb  README.md  pyproject.toml  requirements.txt
constants/: plot_settings.py
notebooks/: 01_figure_2.ipynb  02_figure_3.ipynb  03_figure_4.ipynb  04_figure_5.ipynb  05_figure_6.ipynb  06_figure_7.ipynb  07_figure_7ij.ipynb  mei_generation.ipynb  model_training.ipynb  response_generation_clean.ipynb  simulation_model_response_generation.ipynb  stimulus_generation_clean.ipynb  supp7_stats_table.ipynb  suppStatsTable.ipynb
notebooks/analysis/: gradient_analysis.ipynb
rgc_natstim_model/analyses/: context_change_detection.py  ephys.py  eval.py  gradient.py  mei_experiment.py  mei_properties.py
rgc_natstim_model/constants/: context_change_detection.py  identifiers.py  imaging.py  paths.py
rgc_natstim_model/plotting/: context_change_detection.py  ephys.py  gradient.py  mei_experiment.py  mei_properties.py
rgc_natstim_model/utils/: data_handling.py  data_selection.py  inference.py  nm_vis.py  plot.py
